pkg/front_end/testcases/inference/downwards_inference_assignment_statements.dart.strong.transformed.expect
library test;
import self as self;
import "dart:core" as core;

static method test() → void {
  core::List<core::int> l;
  l = <core::int>[let<BottomType> _ = null in let final dynamic #t1 = let<BottomType> _ = null in invalid-expression "pkg/front_end/testcases/inference/downwards_inference_assignment_statements.dart:10:69: Error: A value of type 'dart.core::String' can't be assigned to a variable of type 'dart.core::int'.
Try changing the type of the left hand side, or casting the right hand side to 'dart.core::int'.
  l = /*@typeArgs=int*/ [/*error:LIST_ELEMENT_TYPE_NOT_ASSIGNABLE*/ \"hello\"];
                                                                    ^" in let final core::String #t2 = "hello" in null];
  l = l = <core::int>[1];
}
static method main() → dynamic {}
